Fix footer width, sign-out button z-index, background minimum container height

--- a/app/components/collections/collections.scss
+++ b/app/components/collections/collections.scss
@@ -7,7 +7,7 @@ $collections-container-width: 793px;
   display: flex;
   flex-direction: column;
   margin-top: $navbar_height;
-  min-height: calc(100vh - #{$navbar_height} - 21px);
+  min-height: calc(100vh - #{$navbar_height});
 }
 
 .container {
